--- a/src/index.css
+++ b/src/index.css
@@ -372,6 +372,8 @@ template {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  font-size: 12px;
 }
 
 a {
