--- a/src/components/common/navbar/mobile/NavMobile.module.css
+++ b/src/components/common/navbar/mobile/NavMobile.module.css
@@ -1,9 +1,10 @@
-img[alt="burgerIcon"] {
+img[alt="burger icon"] {
+  position: absolute;
   bottom: 0;
   left: 0;
-  margin-block: auto;
-  position: absolute;
   top: 0;
+  margin-block: auto;
+  margin-left: 2rem;
 }
 img[alt="logo"].mobile {
   --fade-duration: 0.2s;
@@ -17,25 +18,27 @@ img[alt="logo"].mobile {
 }
 .menu {
   --animation-duration: 0.2s;
-  align-items: center;
-  background: var(--neutral-clr-100);
-  box-sizing: border-box;
-  color: var(--neutral-clr-0);
-  display: flex;
-  justify-content: space-between;
-  left: 0;
-  overflow: hidden;
-  padding-inline: 2rem;
   position: absolute;
-  right: 0;
-  top: 0;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-inline: 2rem;
+  background: var(--neutral-clr-100);
+  overflow: hidden;
 }
 img[alt="close icon"] {
   width: 1em;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  top: 0;
+  margin-block: auto;
+  margin-left: 2rem;
 }
 .menu > ul {
   display: flex;
-  gap: 3rem;
+  gap: 2rem;
   list-style: none;
   margin: auto 0;
   padding: 0;
@@ -43,6 +46,7 @@ img[alt="close icon"] {
 }
 .menu > ul > li {
   font-weight: 600;
+  color: var(--neutral-clr-0);
 }
 .menu.open {
   animation: MenuIn var(--animation-duration) ease-in forwards;
@@ -56,7 +60,6 @@ img[alt="close icon"] {
     opacity: 1;
   }
   100% {
-    display: none;
     opacity: 0;
   }
 }
