--- a/src/index.css
+++ b/src/index.css
@@ -353,6 +353,11 @@ template {
   display: none;
 }
 
+* {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+}
 :root {
   --neutral-clr-0: hsl(0, 0%, 0%);
   --neutral-clr-100: hsl(0, 0%, 100%);
@@ -361,7 +366,6 @@ template {
   --accent-clr-200: hsl(0, 0%, 27%);
 
   font-family: "League Spartan", sans-serif;
-  line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
