--- a/src/components/Slides/Slides.module.css
+++ b/src/components/Slides/Slides.module.css
@@ -48,7 +48,7 @@
   padding: 1.5rem 2rem;
   cursor: pointer;
 }
-.slideNavigator > img:hover {
+.slideNavigator > img:active {
   background-color: var(--accent-clr-200);
 }
 
@@ -64,11 +64,23 @@
   color: var(--neutral-clr-0);
   margin-bottom: 1rem;
   width: fit-content;
+  text-align: left;
 }
 .description {
   font-size: 1.2em;
   text-align: justify;
   line-height: 1.5rem;
+}
+
+.shopNow {
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+  font-weight: 500;
+  letter-spacing: 7px;
+  color: var(--neutral-clr-0);
+  gap: 2rem;
+  cursor: pointer;
 }
 
 .aboutContainer {
@@ -82,6 +94,7 @@
 .aboutContainer .title {
   text-transform: uppercase;
   letter-spacing: 5px;
+  font-size: 1em;
 }
 .aboutContainer > span {
   flex: 1;
@@ -116,5 +129,10 @@
   }
   .title {
     margin-bottom: 2rem;
+  }
+  .shopNow {
+    font-size: 1.5em;
+    margin-top: 3rem;
+    font-weight: 600;
   }
 }
